--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "manar-signaling",
+  "name": "manar-v3-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.1"
-  }
+  "scripts": { "start": "node server.js" },
+  "dependencies": { "express": "^4.18.2", "socket.io": "^4.6.1" }
 }
