--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,19 @@
 {
   "name": "manar-frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port $PORT"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io-client": "^4.6.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "socket.io-client": "4.7.2"
   },
   "devDependencies": {
-    "vite": "^5.1.0"
+    "vite": "5.2.0",
+    "@vitejs/plugin-react": "4.0.0"
   }
 }
