--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "socket.io-client": "4.7.2"
   },
   "devDependencies": {
-    "vite": "5.2.0",
-    "@vitejs/plugin-react": "4.0.0"
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
+  
 }
